Fix contact me spacing

--- a/ag.css
+++ b/ag.css
@@ -89,7 +89,7 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
-  margin-bottom: 1em;
+  margin-top: 2em;
 }
 
 .socialmedia-link {
